<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Home Screen-->
    <string name="app_name">METEO</string>
    <string name="error_message">C’è stato un problema con\nil caricamento dei tuoi dati.\nVerifica la tua rete e riprova.</string>
    <string name="palermo_sic">Palermo, Sicilia</string>
    <string name="prossimi_5">PROSSIMI 5 GIORNI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tomorrow">Domani</string>
    <string name="title_homepage" translatable="false">%s, %s</string>
    <string name="text_temp_min" translatable="false">min.</string>
    <string name="text_temp_max" translatable="false">max.</string>
    <string name="oggi_home" translatable="false">%s</string>
    <string name="tempmin" translatable="false">%sC°</string>
    <string name="tempmax" translatable="false">%sC°</string>
    <string name="data" translatable="false">%s/%s</string>
    <string name="home_rain_sum" translatable="false">%s%%</string>
    <string name="home_windspeed" translatable="false">%skm/h</string>
    <string name="prox5day" translatable="false">%s</string>
    <string name="title_home_city_region">${city},${region}</string>
    <string name="home_min">min</string>
    <string name="home_max">min</string>
    <string name="home_wind">vento</string>
    <string name="home_rain">precip.</string>



    <!--TodayScreen-->
    <string name="oggi_domeni">Domenica 10 settembre</string>
    <string name="some_id">11:00</string>
    <string name="some_id2">31°</string>
    <string name="some_id3">0%</string>
    <string name="percepita">Percepita</string>
    <string name="some_id4">45°</string>
    <string name="indice_uv">Indice UV</string>
    <string name="some_id5">5/10</string>
    <string name="umidita">Umidita</string>
    <string name="some_id6">60%</string>
    <string name="vento">Vento</string>
    <string name="sse_7km_h">SSE 7km/h</string>
    <string name="copertura">Copertura</string>
    <string name="some_id7">24%</string>
    <string name="pioggia">Pioggia</string>
    <string name="cm">0cm</string>

    <!--TodayScreenAdapterTitle-->
    <string name="city_region" translatable="false">%s , %s</string>
    <string name="today">%s,</string>
    <string name="today_details" translatable="false">%s %s %s</string>
    <!---string hourly-->
    <string name="time" translatable="false">%s:00</string>
    <string name="type" translatable="false">type</string>
    <string name="temp" translatable="false">%s°</string>
    <string name="umidity" translatable="false">%s%%</string>
    <!---string card titles-->
    <string name="sp_percepita">Percepita</string>
    <string name="sp_UV">Indice UV</string>
    <string name="sp_umidita">Umidita</string>
    <string name="sp_vento">Vento</string>
    <string name="copertura2">Copertura</string>
    <string name="pioggia2">Pioggia</string>
    <!--- string card data-->
    <string name="percepitaCard">%s°</string>
    <string name="uvCard">%s</string>
    <string name="umiditaCard">%s%%</string>
    <string name="ventoCard">SSE %skm/h</string>
    <string name="coperturaCard">%s%%</string>
    <string name="pioggiaCard">%scm</string>
    <string name="tv_temperature">%dC°</string>


    <!--Bottom Nav-->
    <string name="Home">Home</string>
    <string name="Oggi">Oggi</string>
    <string name="Domani">Domani</string>
    <string name="Cerca">Cerca</string>
    <string name="Riprova">Riprova</string>


    <!--Search Screen-->
    <string name="city_search_item">Città</string>
    <string name="temp_search_item">Err°</string>
    <string name="weather_search_item">unknown</string>
    <string name="recent_search">Ricerche recenti</string>
    <string name="search_hint">Cerca città</string>


    <!-- ENG VERSION -->
    <string name="app_name_english">METEO</string>
    <string name="error_message_english">There was a problem with\nloading your data.\nPlease check your network and try again.</string>
    <string name="palermo_sic_english">Palermo, Sicily</string>
    <string name="prossimi_5_english">NEXT 5 DAYS</string>
    <string name="hello_blank_fragment_english">Hello blank fragment</string>
    <string name="Home_english">Home</string>
    <string name="Oggi_english">Today</string>
    <string name="Domani_english">Tomorrow</string>
    <string name="Cerca_english">Search</string>
    <string name="Riprova_english">Retry</string>
    <string name="oggi">Oggi</string>
    <string name="_10_09">10/09</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="precip">precip.</string>
    <string name="domenica_11_settembre">Domenica 11 settembre</string>
    <string name="domani">Domani,</string>
</resources>
