<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="@dimen/_60dp"
    android:layout_marginHorizontal="@dimen/_24dp">

    <TextView
        android:id="@+id/specificDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_region"
        android:textAppearance="@style/today_tomorrow_day"
        />

    <TextView
        android:id="@+id/today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textAppearance="@style/today_tomorrow"
        />


    <TextView
        android:id="@+id/dateSpecificDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_details"
        android:textAppearance="@style/today_tomorrow_day" />

</LinearLayout>