<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutAnimation="@anim/reciclerview_animation"
    android:padding="@dimen/_25dp"
    android:orientation="horizontal"

    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:cardBackgroundColor="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15dp">

            <TextView
                android:id="@+id/sp_percepita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_18dp"
                android:text="@string/sp_percepita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_indiceUV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_198dp"
                android:layout_marginTop="@dimen/_18dp"
                android:text="@string/sp_UV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_percepita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_37dp"
                android:text="@string/percepita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_198dp"
                android:layout_marginTop="@dimen/_37dp"
                android:text="@string/indice_uv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_70dp"
                android:layout_marginEnd="@dimen/_18dp"
                android:background="#ABA4FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_umidita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_84dp"
                android:text="@string/sp_umidita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_vento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_198dp"
                android:layout_marginTop="@dimen/_84dp"
                android:text="@string/sp_vento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_umidita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_106dp"
                android:text="@string/umidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_vento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_198dp"
                android:layout_marginTop="@dimen/_106dp"
                android:text="@string/vento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_18dp"
                android:layout_marginBottom="@dimen/_50dp"
                android:background="#ABA4FF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sp_copertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_153dp"
                android:text="@string/copertura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/sp_pioggia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_200dp"
                android:layout_marginTop="@dimen/_153dp"
                android:text="@string/pioggia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_copertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginTop="@dimen/_175dp"
                android:text="@string/copertura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_pioggia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_200dp"
                android:layout_marginTop="@dimen/_175dp"
                android:text="@string/pioggia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>