<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0EFFF"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/home_screen_first_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/palermo_sic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginTop="@dimen/_42dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:text="@string/palermo_sic"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_54dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_184dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginStart="@dimen/_24dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:text="@string/domani"
                    android:textAppearance="@style/oggi_domeni"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oggi_domeni"
                    android:layout_width="@dimen/_184dp"
                    android:layout_height="@dimen/_17dp"
                    android:layout_marginStart="@dimen/_24dp"
                    android:text="@string/domenica_11_settembre"
                    android:textAppearance="@style/oggi_domeni"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                tools:itemCount="5" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>