<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/hourly_info_bar"
    android:layoutAnimation="@anim/reciclerview_animation"
    android:background="@color/app_background"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/home_screen_second_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4dp"
            android:textAppearance="@style/today_tomorrow_hour" />

        <ImageView
            android:id="@+id/weatherImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="45dp"
            android:scaleType="centerInside"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/temperatureToday"
            android:layout_width="wrap_content"
            android:text="@string/temp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginVertical="@dimen/_4dp"
            android:textAppearance="@style/today_tomorrow_item_number" />

        <ImageView
            android:id="@+id/humidityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginVertical="@dimen/_4dp"
            android:src="@drawable/fluent_drop_16_filled" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginVertical="@dimen/_4dp"
            android:text="@string/some_id3"
            android:textAppearance="@style/today_tomorrow_item_number" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:rotation="180"
            android:src="@drawable/arrow_today_tomorrow_screen" />

    </LinearLayout>
    <ImageView
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:src="@drawable/baseline_today_screen" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_24dp"
            app:cardCornerRadius="8dp"
            android:visibility="gone">
            <GridLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_column="0"
                    android:layout_row="0">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/temp_percepita"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/percepita"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/percepitaTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/indice"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/indice_uv"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/indiceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:background="@drawable/bottom_line"
                    android:layout_column="0"
                    android:layout_row="1"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_column="0"
                    android:layout_row="2">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/umidita"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/humidityPercentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/vento"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/vento"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/ventoTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />
                    </LinearLayout>


                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:layout_column="0"
                    android:layout_row="3"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_column="0"
                    android:layout_row="4">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/copertura"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/copertura"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/coperturaTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_18dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pioggia"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:text="@string/pioggia"
                            android:textAppearance="@style/today_tomorrow_card_info_title" />

                        <TextView
                            android:id="@+id/pioggiaTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/today_tomorrow_card_info_number" />

                    </LinearLayout>
                </LinearLayout>
            </GridLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
